--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/png" href="../static/favicon.ico"/>
+    <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">   
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <title>Property Bersama</title>
 
